src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_minContourPointsAllowed_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minContourPointsAllowed_set(void* self, int val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_minContourLengthAllowed_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minContourLengthAllowed_set(void* self, int val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_minInterContourDistance_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minInterContourDistance_set(void* self, int val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_minInterCheckerDistance_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minInterCheckerDistance_set(void* self, int val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_minImageSize_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minImageSize_set(void* self, int val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_minGroupSize_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minGroupSize_set(void* self, int val);
extern "C" __declspec(dllexport) bool cv_findChessboardCorners_0(void* image, cv::Size patternSize, void* corners, int flags);
extern "C" __declspec(dllexport) bool cv_checkChessboard_0(void* img, cv::Size size);
extern "C" __declspec(dllexport) bool cv_findChessboardCornersSB_0(void* image, cv::Size patternSize, void* corners, int flags, void* meta);
extern "C" __declspec(dllexport) bool cv_findChessboardCornersSB_1(void* image, cv::Size patternSize, void* corners, int flags);
extern "C" __declspec(dllexport) cv::Scalar cv_estimateChessboardSharpness_0(void* image, cv::Size patternSize, void* corners, float rise_distance, bool vertical, void* sharpness);
extern "C" __declspec(dllexport) bool cv_find4QuadCornerSubpix_0(void* img, void* corners, cv::Size region_size);
extern "C" __declspec(dllexport) void cv_drawChessboardCorners_0(void* image, cv::Size patternSize, void* corners, bool patternWasFound);
extern "C" __declspec(dllexport) bool cv_findCirclesGrid_0(void* image, cv::Size patternSize, void* centers, int flags, void* blobDetector, void* parameters);
extern "C" __declspec(dllexport) bool cv_findCirclesGrid_1(void* image, cv::Size patternSize, void* centers, int flags, void* blobDetector);
extern "C" __declspec(dllexport) void cv_aruco_drawDetectedMarkers_0(void* image, void* corners, void* ids, cv::Scalar borderColor);
extern "C" __declspec(dllexport) void cv_aruco_generateImageMarker_0(void* dictionary, int id, int sidePixels, void* img, int borderBits);
extern "C" __declspec(dllexport) void* cv_aruco_getPredefinedDictionary_0(int dict);
extern "C" __declspec(dllexport) void* cv_aruco_extendDictionary_0(int nMarkers, int markerSize, void* baseDictionary, int randomSeed);
extern "C" __declspec(dllexport) void cv_aruco_drawDetectedCornersCharuco_0(void* image, void* charucoCorners, void* charucoIds, cv::Scalar cornerColor);
extern "C" __declspec(dllexport) void cv_aruco_drawDetectedDiamonds_0(void* image, void* diamondCorners, void* diamondIds, cv::Scalar borderColor);