src/OpenCV5Sharp/Generated/NativeMethods.Objdetect.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_minContourPointsAllowed_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minContourPointsAllowed_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_minContourLengthAllowed_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minContourLengthAllowed_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_minInterContourDistance_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minInterContourDistance_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_minInterCheckerDistance_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minInterCheckerDistance_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_minImageSize_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minImageSize_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_minGroupSize_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minGroupSize_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_findChessboardCorners_0(MatHandle image, Size patternSize, MatHandle corners, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_checkChessboard_0(MatHandle img, Size size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_findChessboardCornersSB_0(MatHandle image, Size patternSize, MatHandle corners, int flags, MatHandle meta);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_findChessboardCornersSB_1(MatHandle image, Size patternSize, MatHandle corners, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Scalar cv_estimateChessboardSharpness_0(MatHandle image, Size patternSize, MatHandle corners, float rise_distance, [MarshalAs(UnmanagedType.U1)] bool vertical, IntPtr sharpness);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_find4QuadCornerSubpix_0(MatHandle img, MatHandle corners, Size region_size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_drawChessboardCorners_0(MatHandle image, Size patternSize, MatHandle corners, [MarshalAs(UnmanagedType.U1)] bool patternWasFound);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_findCirclesGrid_0(MatHandle image, Size patternSize, MatHandle centers, int flags, IntPtr blobDetector, CirclesGridFinderParametersHandle parameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_findCirclesGrid_1(MatHandle image, Size patternSize, MatHandle centers, int flags, IntPtr blobDetector);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_aruco_drawDetectedMarkers_0(MatHandle image, IntPtr corners, IntPtr ids, Scalar borderColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_aruco_generateImageMarker_0(IntPtr dictionary, int id, int sidePixels, MatHandle img, int borderBits);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_aruco_getPredefinedDictionary_0(int dict);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_aruco_extendDictionary_0(int nMarkers, int markerSize, IntPtr baseDictionary, int randomSeed);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_aruco_drawDetectedCornersCharuco_0(MatHandle image, MatHandle charucoCorners, IntPtr charucoIds, Scalar cornerColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_aruco_drawDetectedDiamonds_0(MatHandle image, IntPtr diamondCorners, IntPtr diamondIds, Scalar borderColor);
    }
}
